# rust_kafka_tui

./: .gitignore  Cargo.toml  README.md  config.example.yaml  config.local.yaml
docs/: product-design.md  technical-implementation.md
podman/: .env  compose.yaml  start.sh
src/: error.rs  lib.rs  main.rs  terminal.rs
src/app/: event.rs  mod.rs  state.rs
src/clipboard/: mod.rs
src/config/: mod.rs
src/kafka/: admin.rs  consumer.rs  mod.rs  producer.rs  types.rs
src/schema/: mod.rs
src/service/: message.rs  mod.rs  pagination.rs  produce.rs  topic.rs
src/ui/: cluster.rs  help.rs  message_browser.rs  message_detail.rs  mod.rs  partition_info.rs  produce_modal.rs  reply_preview_modal.rs  text.rs  topic_list.rs
src/ui/components/: cluster_picker.rs  confirm_dialog.rs  footer.rs  input.rs  mod.rs  modal.rs  page_size_picker.rs  pager_bar.rs  spinner.rs  status_bar.rs  table.rs  toast.rs  toolbar.rs
tests/: config_test.rs  pagination_test.rs
