[package]
name = "kafka-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal Kafka browser and producer"
license = "MIT"

[lib]
name = "kafka_tui"
path = "src/lib.rs"

[[bin]]
name = "kafka-tui"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

# Schema Registry
schema_registry_converter = { version = "4.9", features = ["avro", "easy"] }

# Config & Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error & Logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
lru = "0.12"
bytes = "1"
base64 = "0.22"

# Clipboard
arboard = "3.6"

[dev-dependencies]
tempfile = "3"
mockito = "1"

[features]
default = []
integration-tests = []

[profile.release]
lto = true
codegen-units = 1
strip = true
